--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "concurrently": "^5.2.0",
+    "js-base64": "^3.4.5",
     "jshint": "^2.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
