--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.22.0",
     "codemirror": "^5.56.0",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
